Make the experiments into a module, and fix the notebooks to use them correctly

--- a/notebooks/05-model-selection-results-analysis.ipynb
+++ b/notebooks/05-model-selection-results-analysis.ipynb
@@ -64,6 +64,11 @@
          "type": "unknown"
         },
         {
+         "name": "result",
+         "rawType": "object",
+         "type": "unknown"
+        },
+        {
          "name": "accuracy",
          "rawType": "float64",
          "type": "float"
@@ -104,7 +109,7 @@
          "type": "float"
         }
        ],
-       "ref": "4c97bcb5-cabd-4db5-815b-5ce08d24e555",
+       "ref": "1bcf8d31-37a4-4254-bb83-d05535ec1a6c",
        "rows": [
         [
          "0",
@@ -116,6 +121,7 @@
          "9",
          "{}",
          "{'laplace_smoothing': 1e-07, 'bins': 520}",
+         "{'accuracy': 0.6858806613946801, 'b_recall': 0.7038048226454656, 'b_precision': 0.7954528623268903, 'b_f1_score': 0.7468276685246775, 's_recall': 0.651350669022974, 's_precision': 0.5330394958851279, 's_f1_score': 0.586285909065086, 'ams_score': 0.4289222814293034}",
          "0.6858806613946801",
          "0.7038048226454656",
          "0.7954528623268903",
@@ -135,6 +141,7 @@
          "5",
          "{}",
          "{'laplace_smoothing': 0.001, 'bins': 730}",
+         "{'accuracy': 0.6829187634795112, 'b_recall': 0.7046580124359114, 'b_precision': 0.7913461067280835, 'b_f1_score': 0.7454904268947131, 's_recall': 0.6409023824583597, 's_precision': 0.528918429844098, 's_f1_score': 0.5795504375512383, 'ams_score': 0.4391147223363702}",
          "0.6829187634795112",
          "0.7046580124359114",
          "0.7913461067280835",
@@ -154,6 +161,7 @@
          "8",
          "{}",
          "{'bins': 350}",
+         "{'accuracy': 0.7465276779295471, 'b_recall': 0.8610857167733229, 'b_precision': 0.7786328655500226, 'b_f1_score': 0.8177862303486341, 's_recall': 0.5235936970518469, 's_precision': 0.659499546497359, 's_f1_score': 0.5837406436683904, 'ams_score': 0.5412444710956875}",
          "0.7465276779295471",
          "0.8610857167733229",
          "0.7786328655500226",
@@ -173,6 +181,7 @@
          "5",
          "{}",
          "{'laplace_smoothing': 0, 'bins': 410}",
+         "{'accuracy': 0.7313587347232207, 'b_recall': 0.7393476600850878, 'b_precision': 0.8341661538461539, 'b_f1_score': 0.7839000693962526, 's_recall': 0.7159181952350833, 's_precision': 0.5869662921348314, 's_f1_score': 0.6450607902735562, 'ams_score': 0.47389451622943446}",
          "0.7313587347232207",
          "0.7393476600850878",
          "0.8341661538461539",
@@ -192,6 +201,7 @@
          "4",
          "{}",
          "{'laplace_smoothing': 0.01, 'bins': 920}",
+         "{'accuracy': 0.6580158159597412, 'b_recall': 0.5308690437247846, 'b_precision': 0.914600240456868, 'b_f1_score': 0.6717997543845124, 's_recall': 0.90407258915383, 's_precision': 0.4989518796291983, 's_f1_score': 0.6430233081691156, 'ams_score': 0.5196735786704814}",
          "0.6580158159597412",
          "0.5308690437247846",
          "0.914600240456868",
@@ -203,7 +213,7 @@
         ]
        ],
        "shape": {
-        "columns": 16,
+        "columns": 17,
         "rows": 5
        }
       },
@@ -234,6 +244,7 @@
        "      <th>fold_index</th>\n",
        "      <th>categorical_estimator_params</th>\n",
        "      <th>continuous_estimator_params</th>\n",
+       "      <th>result</th>\n",
        "      <th>accuracy</th>\n",
        "      <th>b_recall</th>\n",
        "      <th>b_precision</th>\n",
@@ -255,6 +266,7 @@
        "      <td>9</td>\n",
        "      <td>{}</td>\n",
        "      <td>{'laplace_smoothing': 1e-07, 'bins': 520}</td>\n",
+       "      <td>{'accuracy': 0.6858806613946801, 'b_recall': 0...</td>\n",
        "      <td>0.685881</td>\n",
        "      <td>0.703805</td>\n",
        "      <td>0.795453</td>\n",
@@ -274,6 +286,7 @@
        "      <td>5</td>\n",
        "      <td>{}</td>\n",
        "      <td>{'laplace_smoothing': 0.001, 'bins': 730}</td>\n",
+       "      <td>{'accuracy': 0.6829187634795112, 'b_recall': 0...</td>\n",
        "      <td>0.682919</td>\n",
        "      <td>0.704658</td>\n",
        "      <td>0.791346</td>\n",
@@ -293,6 +306,7 @@
        "      <td>8</td>\n",
        "      <td>{}</td>\n",
        "      <td>{'bins': 350}</td>\n",
+       "      <td>{'accuracy': 0.7465276779295471, 'b_recall': 0...</td>\n",
        "      <td>0.746528</td>\n",
        "      <td>0.861086</td>\n",
        "      <td>0.778633</td>\n",
@@ -312,6 +326,7 @@
        "      <td>5</td>\n",
        "      <td>{}</td>\n",
        "      <td>{'laplace_smoothing': 0, 'bins': 410}</td>\n",
+       "      <td>{'accuracy': 0.7313587347232207, 'b_recall': 0...</td>\n",
        "      <td>0.731359</td>\n",
        "      <td>0.739348</td>\n",
        "      <td>0.834166</td>\n",
@@ -331,6 +346,7 @@
        "      <td>4</td>\n",
        "      <td>{}</td>\n",
        "      <td>{'laplace_smoothing': 0.01, 'bins': 920}</td>\n",
+       "      <td>{'accuracy': 0.6580158159597412, 'b_recall': 0...</td>\n",
        "      <td>0.658016</td>\n",
        "      <td>0.530869</td>\n",
        "      <td>0.914600</td>\n",
@@ -366,19 +382,19 @@
        "3                           {}      {'laplace_smoothing': 0, 'bins': 410}   \n",
        "4                           {}   {'laplace_smoothing': 0.01, 'bins': 920}   \n",
        "\n",
-       "   accuracy  b_recall  b_precision  b_f1_score  s_recall  s_precision  \\\n",
-       "0  0.685881  0.703805     0.795453    0.746828  0.651351     0.533039   \n",
-       "1  0.682919  0.704658     0.791346    0.745490  0.640902     0.528918   \n",
-       "2  0.746528  0.861086     0.778633    0.817786  0.523594     0.659500   \n",
-       "3  0.731359  0.739348     0.834166    0.783900  0.715918     0.586966   \n",
-       "4  0.658016  0.530869     0.914600    0.671800  0.904073     0.498952   \n",
+       "                                              result  accuracy  b_recall  \\\n",
+       "0  {'accuracy': 0.6858806613946801, 'b_recall': 0...  0.685881  0.703805   \n",
+       "1  {'accuracy': 0.6829187634795112, 'b_recall': 0...  0.682919  0.704658   \n",
+       "2  {'accuracy': 0.7465276779295471, 'b_recall': 0...  0.746528  0.861086   \n",
+       "3  {'accuracy': 0.7313587347232207, 'b_recall': 0...  0.731359  0.739348   \n",
+       "4  {'accuracy': 0.6580158159597412, 'b_recall': 0...  0.658016  0.530869   \n",
        "\n",
-       "   s_f1_score  ams_score  \n",
-       "0    0.586286   0.428922  \n",
-       "1    0.579550   0.439115  \n",
-       "2    0.583741   0.541244  \n",
-       "3    0.645061   0.473895  \n",
-       "4    0.643023   0.519674  "
+       "   b_precision  b_f1_score  s_recall  s_precision  s_f1_score  ams_score  \n",
+       "0     0.795453    0.746828  0.651351     0.533039    0.586286   0.428922  \n",
+       "1     0.791346    0.745490  0.640902     0.528918    0.579550   0.439115  \n",
+       "2     0.778633    0.817786  0.523594     0.659500    0.583741   0.541244  \n",
+       "3     0.834166    0.783900  0.715918     0.586966    0.645061   0.473895  \n",
+       "4     0.914600    0.671800  0.904073     0.498952    0.643023   0.519674  "
       ]
      },
      "execution_count": 1,
@@ -396,6 +412,9 @@
     "        res.append(json.loads(line))\n",
     "# Convert to DataFrame for easier analysis\n",
     "res = pd.DataFrame(res)\n",
+    "# Unpack the results into columns\n",
+    "for field in res.iloc[0][\"result\"].keys():\n",
+    "    res[field] = res[\"result\"].apply(lambda x: x[field])\n",
     "categorical_cols = [\"model_class\", \"categorical_estimator_class\", \"continuous_estimator_class\", \"dataset\"]\n",
     "for col in categorical_cols:\n",
     "    res[col] = res[col].astype(\"category\")\n",
@@ -409,7 +428,7 @@
    "source": [
     "### Final Parameter Selection\n",
     "\n",
-    "Now that we have all the results, we can select the best parameters for each model."
+    "Now that we have all the results, we can select the best parameters for each model, so we can run a final training experiment."
    ]
   },
   {
@@ -435,7 +454,7 @@
       " │   │   │   bins: 20\n",
       " │   │   │   laplace_smoothing: 0\n",
       " │   │   │   -----------------------------\n",
-      " │   │   │   Number of Experiments: 9900\n",
+      " │   │   │   Number of Experiments: 10000\n",
       " │   │   │   Best Average AMS: 0.5134\n",
       " ├── Continuous Estimator Class: RobustGaussianEstimator\n",
       " │   Categorical Estimator Class: RobustCategoricalEstimator\n",
@@ -456,6 +475,11 @@
       " │   │   │   -----------------------------\n",
       " │   │   │   Number of Experiments: 100\n",
       " │   │   │   Best Average AMS: 0.0970\n",
+      " │   ├── Dataset: original\n",
+      " │   │   │   laplace_smoothing: 0.001\n",
+      " │   │   │   -----------------------------\n",
+      " │   │   │   Number of Experiments: 100\n",
+      " │   │   │   Best Average AMS: 0.1646\n",
       " ├── Continuous Estimator Class: RobustEagerGaussianKDEstimator\n",
       " │   Categorical Estimator Class: RobustCategoricalEstimator\n",
       " │   ├── Dataset: original\n",
@@ -572,9 +596,15 @@
    ],
    "source": [
     "# For each combination, find the best hyperparameters based on the highest AMS score\n",
+    "from typing import List\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import json\n",
+    "import sys, os\n",
+    "\n",
+    "sys.path.append(os.path.abspath(\"../\"))\n",
+    "\n",
+    "from src.naive_bayes.experiments import ExperimentBase\n",
     "\n",
     "# Get all the unique combinations of model_class, continuous_estimator_class, categorical_estimator_class, and dataset\n",
     "unique_combinations = res[\n",
@@ -584,7 +614,7 @@
     "hline = \"─\"\n",
     "vline = \"│\"\n",
     "\n",
-    "final_experiments = []\n",
+    "final_experiments: List[ExperimentBase] = []\n",
     "for model_class in res[\"model_class\"].unique():\n",
     "    if not any(res[\"model_class\"] == model_class):\n",
     "        continue\n",
@@ -627,13 +657,13 @@
     "                best_hyperparam = avg_ams.idxmax()\n",
     "                best_ams = avg_ams.max()\n",
     "                final_experiments.append(\n",
-    "                    {\n",
-    "                        \"model_class\": model_class,\n",
-    "                        \"continuous_estimator_class\": continuous_estimator_class,\n",
-    "                        \"categorical_estimator_class\": categorical_estimator_class,\n",
-    "                        \"dataset\": dataset,\n",
-    "                        \"continuous_estimator_params\": json.loads(best_hyperparam),\n",
-    "                    }\n",
+    "                    ExperimentBase(\n",
+    "                        model_class=model_class,\n",
+    "                        continuous_estimator_class=continuous_estimator_class,\n",
+    "                        categorical_estimator_class=categorical_estimator_class,\n",
+    "                        dataset=dataset,\n",
+    "                        continuous_estimator_params=json.loads(best_hyperparam),\n",
+    "                    )\n",
     "                )\n",
     "                for param_str, param_value in json.loads(best_hyperparam).items():\n",
     "                    print(f\" {vline}   {vline}   {vline}   {param_str}: {param_value}\")\n",
@@ -644,15 +674,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "3a0cb216",
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(final_experiments)\n",
-    "with open(\"../results/final-experiments.jsonl\", \"w\") as f:\n",
-    "    for exp in final_experiments:\n",
-    "        f.write(json.dumps(exp) + \"\\n\")"
+    "from src.naive_bayes.experiments import store_experiment_set\n",
+    "\n",
+    "store_experiment_set(final_experiments, \"../results/final-experiments.jsonl\")"
    ]
   }
  ],
